student placed module remaining

--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -259,7 +259,7 @@
         <div class="content">
            <h5 class="card-title">View Stats</h5>
 	    <p class="card-text">Views statistics on current placement scenario.</p>
-	    <a href="#!" class="btn btn-primary">Button</a>
+	    <a href="/viewstat" class="btn btn-primary">Button</a>
         </div>
      </div>
   </div>
