--- a/templates/create.html
+++ b/templates/create.html
@@ -124,7 +124,7 @@
                             </div>
                             
                             <div class="col-md-12">
-                                <input class="form-control" type="" name="address" placeholder="Address" pattern="([A-Z])\w+" required>
+                                <input class="form-control" type="" name="address" placeholder="Address" minlength='10' maxlength='40' required>
                              <div class="valid-feedback">Address field is valid!</div>
                                  <div class="invalid-feedback">Address field cannot be blank!</div>
                             </div>
@@ -184,7 +184,7 @@
                             
                             
                             <div class="col-md-12">
-                                <input class="form-control" type="text" name="fa" placeholder="Faculty Advisor" minlength="10" required>
+                                <input class="form-control" type="text" name="fa" placeholder="Faculty Advisor" minlength="3" required>
                                  <div class="valid-feedback">FA field is valid!</div>
                                  <div class="invalid-feedback">FA field cannot be blank!</div>
                             </div>
