--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
       <th scope="col" class="thead-dark">Date Added</th>
     </tr>
   </thead>
-    
+
     {% for s in students %}
-  
+
     <tbody>
       <tr>
         <th scope="row">{{students.index(s)+1}}</th>
@@ -38,13 +38,13 @@
         <td>{{ s[9] }}</td>
         <td>{{ s[10] }}</td>
         <td>{{ s[11] }}</td>
-        
+
         <td><a href="/my-link?{{ s[0] }}" ><button type="button" class="btn btn-danger" ">Delete</button></a></td>
-        
+
       </tr>
     </tbody>
     {% endfor %}
-    
+
 </table>
 
 
@@ -59,20 +59,20 @@
       <th scope="col">Date Added</th>
     </tr>
   </thead>
-    
+
     {% for u in ugs %}
-  
+
     <tbody>
       <tr>
         <th scope="row">{{ugs.index(u)+1}}</th>
         <td>{{ u[0] }}</td>
         <td>{{ u[1] }}</td>
         <td>{{ u[2] }}</td>
-        <td>{{ u[3] }}</td>     
+        <td>{{ u[3] }}</td>
       </tr>
     </tbody>
     {% endfor %}
-    
+
 </table>
 
 
@@ -87,20 +87,20 @@
       <th scope="col">Date Added</th>
     </tr>
   </thead>
-    
+
     {% for p in pgs %}
-  
+
     <tbody>
       <tr>
         <th scope="row">{{pgs.index(p)+1}}</th>
         <td>{{ p[0] }}</td>
         <td>{{ p[1] }}</td>
         <td>{{ p[2] }}</td>
-        <td>{{ p[3] }}</td>     
+        <td>{{ p[3] }}</td>
       </tr>
     </tbody>
     {% endfor %}
-    
+
 </table>
 
 
@@ -118,7 +118,7 @@
      <th>Type</th>
     </tr>
   </thead>
-  
+
   {% for row in job %}
     <tbody>
       <tr>
@@ -137,9 +137,9 @@
       </tr>
     </tbody>
   {% endfor %}
-    
-    
-    
+
+
+
 </table>
 
 
@@ -153,7 +153,7 @@
      <th>Package</th>
     </tr>
   </thead>
-  
+
   {% for row in fulltime %}
     <tbody>
       <tr>
@@ -164,9 +164,9 @@
       </tr>
     </tbody>
   {% endfor %}
-    
-    
-    
+
+
+
 </table>
 
 
@@ -181,7 +181,7 @@
      <th>Stipend</th>
     </tr>
   </thead>
-  
+
   {% for row in intern %}
     <tbody>
       <tr>
@@ -193,11 +193,36 @@
       </tr>
     </tbody>
   {% endfor %}
-    
-    
-    
+
+
+
 </table>
 
+
+
+<h2> Applied Jobs </h2>
+<table class="table table-striped table-bordered  table-hover">
+  <thead>
+    <tr>
+     <th>#</th>
+     <th>Reg Number</th>
+     <th>Companies</th>
+    </tr>
+  </thead>
+
+  {% for row in applied %}
+    <tbody>
+      <tr>
+        <th scope="row">{{applied.index(row)+1}}</th>
+        <td>{{ row[0] }}</td>
+        <td>{{ row[1] }}</td>
+      </tr>
+    </tbody>
+  {% endfor %}
+
+
+
+</table>
 
 
 
@@ -207,5 +232,3 @@
 
 
 {% endblock %}
-
-
